Add Database models & DAL & Database initialzer

--- a/InfiniteTiers.DevicesStore.Presentation/appsettings.json
+++ b/InfiniteTiers.DevicesStore.Presentation/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ItgContext": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True"
+  }
 }
