--- a/InfiniteTiers.DevicesStore.Presentation/InfiniteTiers.DevicesStore.Presentation.csproj
+++ b/InfiniteTiers.DevicesStore.Presentation/InfiniteTiers.DevicesStore.Presentation.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InfiniteTiers.DevicesStore.Data\InfiniteTiers.DevicesStore.Data.csproj" />
+  </ItemGroup>
+
 </Project>
