Add login functionality

--- a/InfiniteTiers.DevicesStore.Presentation/appsettings.json
+++ b/InfiniteTiers.DevicesStore.Presentation/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ItgContext": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True"
+    "ItgContext": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True",
+    "AuthDbContextConnection": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True"
   }
 }
