--- a/InfiniteTiers.DevicesStore.Presentation/Properties/launchSettings.json
+++ b/InfiniteTiers.DevicesStore.Presentation/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63799",
+      "applicationUrl": "http://localhost:8089",
       "sslPort": 44339
     }
   },
@@ -17,12 +17,12 @@
     },
     "InfiniteTiers.DevicesStore.Presentation": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
