Add roles to DB

--- a/InfiniteTiers.DevicesStore.Presentation/appsettings.json
+++ b/InfiniteTiers.DevicesStore.Presentation/appsettings.json
@@ -10,5 +10,10 @@
   "ConnectionStrings": {
     "ItgContext": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=ItgStore;Integrated Security=True",
     "AuthDbContextConnection": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True"
-  }
+  },
+  "Roles": [
+      "Operation Manager",
+      "Admin",
+      "User"
+    ]
 }
