--- a/InfiniteTiers.DevicesStore.Presentation/appsettings.json
+++ b/InfiniteTiers.DevicesStore.Presentation/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ItgContext": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=ItgStore;Integrated Security=True",
+    "ItgContext": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True",
     "AuthDbContextConnection": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True"
   },
   "Roles": [
