Add mail service

--- a/InfiniteTiers.DevicesStore.Presentation/appsettings.Development.json
+++ b/InfiniteTiers.DevicesStore.Presentation/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MailSettings": {
+    "Mail": "osborne63@ethereal.email",
+    "DisplayName": "ITG",
+    "Password": "7HBeVWJ1ZBKsjG4pS3",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
   }
 }
