--- a/InfiniteTiers.DevicesStore.Presentation/appsettings.json
+++ b/InfiniteTiers.DevicesStore.Presentation/appsettings.json
@@ -11,8 +11,15 @@
     "AuthDbContextConnection": "Data Source=NAEL-SALEH\\SQLEXPRESS;Initial Catalog=Itg;Integrated Security=True"
   },
   "Roles": [
-      "Operation Manager",
-      "Admin",
-      "User"
-    ]
+    "Operation Manager",
+    "Admin",
+    "User"
+  ],
+  "MailSettings": {
+    "Mail": "<fromemail>",
+    "DisplayName": "<displayname>",
+    "Password": "<yourpasswordhere>",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
+  }
 }
