Add category repository

--- a/InfiniteTiers.DevicesStore.Presentation/InfiniteTiers.DevicesStore.Presentation.csproj
+++ b/InfiniteTiers.DevicesStore.Presentation/InfiniteTiers.DevicesStore.Presentation.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\InfiniteTiers.DevicesStore.Data\InfiniteTiers.DevicesStore.Data.csproj" />
+    <ProjectReference Include="..\InfiniteTiers.DevicesStore.Logic\InfiniteTiers.DevicesStore.Logic.csproj" />
   </ItemGroup>
 
 </Project>
